# aa-engine

./: .gitignore  AGENTS.md  Cargo.toml  README.md  aa  aa.project.toml
.github/workflows/: ci.yml
config/: engine.toml
crates/aa_ability/: Cargo.toml
crates/aa_ability/benches/: bench_100_asc.rs
crates/aa_ability/src/: ability.rs  activate.rs  apply.rs  assets.rs  attribute.rs  components.rs  events.rs  lib.rs  loader.rs  pending.rs  pending_effects.rs  plugin.rs  registry.rs
crates/aa_ability/tests/: p1_gates.rs  p3_gates.rs
crates/aa_animation/: Cargo.toml
crates/aa_animation/src/: lib.rs  locomotion.rs  plugin.rs
crates/aa_assets/: Cargo.toml
crates/aa_assets/src/: error.rs  lib.rs  manifest.rs  plugin.rs  registry.rs  tag_dictionary.rs  validation.rs
crates/aa_cli/: Cargo.toml
crates/aa_cli/src/: exit_codes.rs  main.rs  project.rs  ron_subset.rs  schema_subset.rs
crates/aa_cli/src/commands/: check.rs  eval.rs  index.rs  mod.rs  playtest.rs  profile.rs  run.rs  scene.rs  validate.rs  world.rs
crates/aa_cli/tests/: editor_cli_patch_parity.rs
crates/aa_core/: Cargo.toml
crates/aa_core/src/: config.rs  cvar.rs  engine.rs  engine_base.toml  error.rs  lib.rs  paths.rs  plugin.rs  role.rs  schedule.rs
crates/aa_core/tests/: config_merge_order.rs  p0_platform_boot.rs  schedule_ambiguity.rs
crates/aa_experience/: Cargo.toml
crates/aa_experience/src/: assets.rs  lib.rs  loader.rs  plugin.rs
crates/aa_experience/tests/: p1_gates.rs
crates/aa_gameplay/: Cargo.toml
crates/aa_gameplay/src/: components.rs  death.rs  dummy_ai.rs  init.rs  lib.rs  plugin.rs  spawn.rs
crates/aa_gameplay/tests/: death_loop.rs  p1_gates.rs
crates/aa_input/: Cargo.toml
crates/aa_input/src/: actions.rs  assets.rs  gather.rs  lib.rs  plugin.rs
crates/aa_net/: Cargo.toml
crates/aa_net/src/: lib.rs  plugin.rs  replicated.rs  role.rs
crates/aa_physics/: Cargo.toml
crates/aa_physics/src/: dash.rs  lib.rs  movement.rs  plugin.rs  projectile.rs  rapier.rs
crates/aa_reflect/: Cargo.toml
crates/aa_reflect/src/: lib.rs  plugin.rs  registry.rs
crates/aa_scene/: Cargo.toml
crates/aa_scene/src/: components.rs  lib.rs  loader.rs  plugin.rs  possession.rs  prefab.rs  ron_components.rs  scene.rs  spawn.rs
crates/aa_scene/tests/: p0_gates.rs
crates/aa_tags/: Cargo.toml
crates/aa_tags/src/: container.rs  lib.rs  plugin.rs  query.rs  registry.rs
crates/aa_world_stream/: Cargo.toml
crates/aa_world_stream/src/: assets.rs  cook.rs  inspect.rs  inspect_live.rs  lib.rs  loader.rs  plugin.rs  profile.rs  registry.rs  spawn.rs  streaming.rs
crates/aa_world_stream/tests/: p3_gates.rs
docs/research/unreal_to_bevy/: 00_overview.md  01_engine_architecture.md  02_object_model_vs_ecs.md  AGENTS.md  (+17 more)
docs/specs/: 00_AA_DEFINITION.md  01_GLOBAL_REQUIREMENTS.md  02_PERFORMANCE_BUDGETS.md  03_PLATFORM_MATRIX.md  04_ACCEPTANCE_GATES.md  05_TRACEABILITY_MATRIX.md  06_AAA_OPEN_WORLD_STUDIO.md  07_ENGINE_STUDIO_EXECUTION_PLAN.md  GATE_STATUS.md  README.md  REQ_TEST_MAP.json
examples/demo_game/: Cargo.toml  aa.project.toml
examples/demo_game/assets/abilities/: dash.ron  fireball.ron  heal_burst.ron  rifle_shot.ron
examples/demo_game/assets/attributes/: hero_combat.ron
examples/demo_game/assets/data/: tags.ron
examples/demo_game/assets/effects/: burning.ron  dummy_melee.ron  fireball_hit.ron  heal_burst.ron  rifle_hit.ron
examples/demo_game/assets/experiences/: demo.ron
examples/demo_game/assets/input/contexts/: shooter.ron
examples/demo_game/assets/playtests/: ability_grants_resolve.ron  combat_ability_rotation.ron  dash_mobility.ron  death_respawn.ron  dummy_melee_damage.ron  experience_boot.ron  fireball_hit.ron  heal_burst_restore.ron  input_shooter_context.ron  locomotion_smoke.ron  respawn_timer_gate.ron  rifle_shot_hit.ron  smoke.ron  stun_denies_fire.ron
examples/demo_game/assets/prefabs/: player.ron
examples/demo_game/assets/scenes/: main_menu.ron
examples/demo_game/config/: engine.toml  game.toml  scalability.toml
examples/demo_game/src/: camera.rs  hud.rs  main.rs  playtest.rs
examples/demo_game/src/combat/: abilities.rs  arena.rs  mod.rs
examples/demo_game_contract/: Cargo.toml  aa.project.toml
examples/open_world_studio/: Cargo.toml  aa.project.toml  playtest_report.json
examples/open_world_studio/assets/abilities/: basic_melee.ron  basic_ranged_attack.ron
examples/open_world_studio/assets/ai/: camp_guard.ron
examples/open_world_studio/assets/data/: tags.ron
examples/open_world_studio/assets/effects/: camp_guard_baseline.ron
examples/open_world_studio/assets/pawns/: camp_guard.ron  player_explorer.ron
examples/open_world_studio/assets/playtests/: camp_guard_spawn.ron  open_world_enemy_camp.ron  open_world_sector_traverse.ron  sector_0_0_activation.ron  sector_layer_gameplay.ron  spawn_table_camp_guard.ron  streaming_budget_smoke.ron  streaming_traverse_short.ron  world_cook_smoke.ron
examples/open_world_studio/assets/prefabs/: camp_fire.ron  camp_guard_spawn.ron
examples/open_world_studio/assets/sectors/: sector_-10_-1.ron  sector_-10_-10.ron  sector_-10_-11.ron  sector_-10_-12.ron  sector_-10_-13.ron  sector_-10_-14.ron  sector_-10_-15.ron  sector_-10_-16.ron  sector_-10_-2.ron  sector_-10_-3.ron  sector_-10_-4.ron  sector_-10_-5.ron  sector_-10_-6.ron  sector_-10_-7.ron  sector_-10_-8.ron  sector_-10_-9.ron  sector_-10_0.ron  sector_-10_1.ron  sector_-10_10.ron  sector_-10_11.ron  sector_-10_12.ron  sector_-10_13.ron  sector_-10_14.ron  sector_-10_15.ron  sector_-10_2.ron  sector_-10_3.ron  sector_-10_4.ron  sector_-10_5.ron  sector_-10_6.ron  sector_-10_7.ron  sector_-10_8.ron  sector_-10_9.ron  sector_-11_-1.ron  sector_-11_-10.ron  sector_-11_-11.ron  sector_-11_-12.ron  sector_-11_-13.ron  sector_-11_-14.ron  sector_-11_-15.ron  sector_-11_-16.ron  (+984 more)
examples/open_world_studio/assets/spawn_tables/: enemy_camp_sector_0_0.ron
examples/open_world_studio/assets/worlds/: open_world_studio.ron
examples/open_world_studio/config/: engine.toml  game.toml  input.toml
examples/open_world_studio/src/: main.rs  playtest.rs
(+103 files in other folders)
