[workspace]
resolver = "2"
members = [
    "crates/aa_core",
    "crates/aa_reflect",
    "crates/aa_assets",
    "crates/aa_scene",
    "crates/aa_tags",
    "crates/aa_input",
    "crates/aa_ability",
    "crates/aa_experience",
    "crates/aa_gameplay",
    "crates/aa_physics",
    "crates/aa_animation",
    "crates/aa_net",
    "crates/aa_cli",
    "examples/demo_game",
]
default-members = ["examples/demo_game"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"

[workspace.dependencies]
bevy = { version = "0.18.1", default-features = true }
bevy_rapier3d = { version = "0.34", default-features = false, features = ["dim3"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
