[package]
name = "aa_ability"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AA Engine gameplay abilities, effects, and attributes"

[dependencies]
aa_core = { path = "../aa_core" }
aa_tags = { path = "../aa_tags" }
bevy = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.5"
aa_core = { path = "../aa_core" }
tempfile = "3"

[[bench]]
name = "bench_100_asc"
harness = false
