[package]
name = "aa_assets"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AA Engine asset loading and manifest"

[dependencies]
aa_core = { path = "../aa_core" }
bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
thiserror = { workspace = true }
