[package]
name = "aa_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AA Engine CLI — check, validate, and run game projects"

[[bin]]
name = "aa"
path = "src/main.rs"

[dependencies]
aa_world_stream = { path = "../aa_world_stream" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
