[package]
name = "aa_gameplay"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AA Engine gameplay framework — PlayerState, possession, respawn"

[dependencies]
aa_ability = { path = "../aa_ability" }
aa_core = { path = "../aa_core" }
aa_experience = { path = "../aa_experience" }
aa_input = { path = "../aa_input" }
aa_scene = { path = "../aa_scene" }
aa_tags = { path = "../aa_tags" }
bevy = { workspace = true }

[dev-dependencies]
aa_assets = { path = "../aa_assets" }
