[package]
name = "aa_input"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AA Engine semantic input actions and mapping contexts"

[dependencies]
aa_core = { path = "../aa_core" }
bevy = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
