[package]
name = "aa_physics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AA Engine kinematic character movement and projectiles"

[dependencies]
aa_ability = { path = "../aa_ability" }
aa_core = { path = "../aa_core" }
aa_gameplay = { path = "../aa_gameplay" }
aa_input = { path = "../aa_input" }
aa_scene = { path = "../aa_scene" }
aa_tags = { path = "../aa_tags" }
bevy = { workspace = true }
bevy_rapier3d = { workspace = true }
