[package]
name = "aa_tags"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AA Engine hierarchical gameplay tags"

[dependencies]
aa_assets = { path = "../aa_assets" }
aa_core = { path = "../aa_core" }
bevy = { workspace = true }
serde = { workspace = true }
